@@ -1,250 +1,204 @@
 # DTR 80/20 Essentials: The Minimal Path to Productivity
 
-**Goal:** Master 20% of DTR to be productive with 80% of real-world API testing scenarios in ~45 minutes.
+**Goal:** Master the core DTR 2.6.0 `say*` API in 45 minutes — covering the 20% of methods that handle 80% of documentation scenarios.
+
+**DTR Version:** 2.6.0 | **Java:** 25+ with `--enable-preview`
 
 ---
 
-## The Core Trinity: Three Methods That Do Most of the Work
+## The JUnit 5 Test Pattern
 
-Every DTR test revolves around **three methods**. Master these and you can write working tests immediately.
-
-### 1. Document a Section: `sayNextSection(String title)`
+Every DTR test follows this structure:
 
 ```java
-sayNextSection("User Management API");
+import io.github.seanchatmangpt.dtr.core.DtrContext;
+import io.github.seanchatmangpt.dtr.core.DtrExtension;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+
+@ExtendWith(DtrExtension.class)
+class MyDocTest {
+
+    @Test
+    void myTest(DtrContext ctx) {
+        ctx.sayNextSection("My Section");
+        ctx.say("Content here.");
+    }
+}
 ```
 
-**What it does:**
-- Creates an H1 heading in the documentation
-- Adds an entry to the table of contents
-- Visually separates test sections
-
-**Use this:** Once per logical API section in your test.
-
-### 2. Add Explanatory Text: `say(String text)`
-
-```java
-say("GET /api/users retrieves all active users. " +
-    "The response is paginated with 20 users per page.");
-```
-
-**What it does:**
-- Renders a paragraph in the documentation
-- Explains to API consumers what your test is demonstrating
-- Lives in your test code — stays in sync with API changes
-
-**Use this:** Before and after requests to explain intent and results.
-
-### 3. Make a Request & Document It: `sayAndMakeRequest(Request)`
-
-```java
-Response response = sayAndMakeRequest(
-    Request.GET()
-        .url(testServerUrl().path("/api/users")));
-```
-
-**What it does:**
-- Executes an HTTP request
-- Captures request and response
-- Renders both in documentation with syntax highlighting
-- Returns the `Response` object for assertions
-
-**Use this:** For every HTTP request you want documented.
+`DtrContext` is injected by JUnit 5 via `DtrExtension`. All `say*` calls on `ctx` produce output in `target/docs/test-results/MyDocTest.md`.
 
 ---
 
-## The Request/Response Patterns: Four Patterns Cover 80% of Use Cases
+## The 14 Core say* Methods
 
-### Pattern 1: Simple GET Request
+### Structure and Text
 
-```java
-Response response = sayAndMakeRequest(
-    Request.GET()
-        .url(testServerUrl().path("/api/users")));
-
-sayAndAssertThat("Status is 200 OK",
-    response.httpStatus(), equalTo(200));
-```
-
-**When:** Fetching data from a GET endpoint.
-
-### Pattern 2: POST with JSON Payload
+| Method | Output | Use For |
+|--------|--------|---------|
+| `sayNextSection(String)` | H1 heading | Chapter/section titles |
+| `say(String)` | Paragraph | Body text and explanations |
+| `sayNote(String)` | Note block | Tips and context |
+| `sayWarning(String)` | Alert block | Critical information |
 
 ```java
-UserDto newUser = new UserDto("alice", "alice@example.com");
-
-Response response = sayAndMakeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/users"))
-        .contentTypeApplicationJson()
-        .payload(newUser));
-
-sayAndAssertThat("User created with 201",
-    response.httpStatus(), equalTo(201));
-
-UserDto created = response.payloadAs(UserDto.class);
-sayAndAssertThat("Created user has ID",
-    created.id, notNullValue());
+ctx.sayNextSection("User Management");
+ctx.say("The User API supports CRUD operations.");
+ctx.sayNote("All endpoints require authentication.");
+ctx.sayWarning("Deleting a user is irreversible.");
 ```
 
-**When:** Creating or updating resources via JSON.
+### Data and Code
 
-**Key methods:**
-- `.contentTypeApplicationJson()` — Sets the Content-Type header
-- `.payload(object)` — Serializes your DTO to JSON via Jackson
-
-### Pattern 3: Parse JSON Response
+| Method | Output | Use For |
+|--------|--------|---------|
+| `sayCode(String, String)` | Fenced code block | Code examples |
+| `sayJson(Object)` | Pretty-printed JSON | Payload examples |
+| `sayTable(String[][])` | Markdown table | Data comparison |
+| `sayKeyValue(Map)` | 2-column table | Metadata display |
 
 ```java
-List<UserDto> users = response.payloadJsonAs(new TypeReference<List<UserDto>>() {});
-
-sayAndAssertThat("At least 3 users returned",
-    users.size(), greaterThanOrEqualTo(3));
+ctx.sayCode("var x = 42;", "java");
+ctx.sayJson(Map.of("status", "ok", "id", 42));
+ctx.sayTable(new String[][] {
+    {"Name", "Email"},
+    {"Alice", "alice@example.com"}
+});
+ctx.sayKeyValue(Map.of("Java", "25.0.2", "DTR", "2.6.0"));
 ```
 
-**When:** Deserializing complex responses (lists, maps).
+### Lists
 
-**Key methods:**
-- `.payloadAs(MyDto.class)` — Auto-detect JSON/XML → deserialize
-- `.payloadJsonAs(Class)` — Force JSON deserialization
-- `.payloadAsString()` — Get raw text
-
-### Pattern 4: Form-Based Authentication + Session Management
+| Method | Output | Use For |
+|--------|--------|---------|
+| `sayUnorderedList(List)` | Bullet list | Features, options |
+| `sayOrderedList(List)` | Numbered list | Steps, sequence |
 
 ```java
-// Silent login — no documentation
-makeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/login"))
-        .addFormParameter("username", "bob@example.com")
-        .addFormParameter("password", "secret123"));
-
-// Subsequent requests automatically include session cookie
-Response authenticated = sayAndMakeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/articles"))
-        .contentTypeApplicationJson()
-        .payload(article));
-
-sayAndAssertThat("Authenticated POST succeeds",
-    authenticated.httpStatus(), equalTo(201));
+ctx.sayUnorderedList(List.of("Record schemas", "Mermaid diagrams", "ASCII charts"));
+ctx.sayOrderedList(List.of("Add dependency", "Write test", "Run mvnd test"));
 ```
 
-**Key methods:**
-- `.makeRequest(Request)` — Silent execution (no documentation)
-- `.addFormParameter(key, value)` — Add form fields
-- Cookies auto-persist across requests in the same test method
+### New in 2.6.0: Measurement and Introspection
+
+| Method | Output | Use For |
+|--------|--------|---------|
+| `sayBenchmark(String, Runnable)` | Timing table | Inline microbenchmarks |
+| `sayEnvProfile()` | Environment table | Java/OS/heap snapshot |
+| `sayRecordComponents(Class)` | Schema table | Record field documentation |
+| `sayException(Throwable)` | Exception block | Error documentation |
+
+```java
+ctx.sayBenchmark("String concatenation", () -> {
+    String s = "";
+    for (int i = 0; i < 1000; i++) s += i;
+});
+
+ctx.sayEnvProfile();
+
+record User(String name, String email, int age) {}
+ctx.sayRecordComponents(User.class);
+
+try {
+    throw new IllegalArgumentException("Bad input");
+} catch (Exception e) {
+    ctx.sayException(e);
+}
+```
 
 ---
 
-## Five Common Workflows: Copy-Paste-Ready Examples
+## Five Common Workflows
 
-### Workflow 1: GET and Assert Status
+### Workflow 1: Document a Data Structure
 
 ```java
 @Test
-public void testGetArticles() {
-    sayNextSection("List Articles");
-    say("GET /articles returns a paginated list.");
+void documentUserRecord(DtrContext ctx) {
+    ctx.sayNextSection("User Record Schema");
+    ctx.say("The User record represents an authenticated user in the system.");
 
-    Response response = sayAndMakeRequest(
-        Request.GET()
-            .url(testServerUrl().path("/api/articles")));
+    record User(String name, String email, boolean active) {}
+    ctx.sayRecordComponents(User.class);
 
-    sayAndAssertThat("Status is 200 OK",
-        response.httpStatus(), equalTo(200));
+    ctx.say("Example payload:");
+    ctx.sayJson(new User("alice", "alice@example.com", true));
 }
 ```
 
-### Workflow 2: POST, Parse, and Verify
+### Workflow 2: Inline Benchmark
 
 ```java
 @Test
-public void testCreateArticle() {
-    sayNextSection("Create Article");
-    say("POST creates a new article and returns the created object.");
+void benchmarkStringOps(DtrContext ctx) {
+    ctx.sayNextSection("String Operation Performance");
+    ctx.say("Comparing concatenation strategies on Java " + System.getProperty("java.version"));
 
-    ArticleDto article = new ArticleDto("Java 25 Features", "...");
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));
+    ctx.sayBenchmark("StringBuilder (1000 appends)", () -> {
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < 1000; i++) sb.append(i);
+        sb.toString();
+    });
 
-    sayAndAssertThat("Status is 201 Created",
-        response.httpStatus(), equalTo(201));
-
-    ArticleDto created = response.payloadAs(ArticleDto.class);
-    sayAndAssertThat("Created article has ID",
-        created.id, notNullValue());
-    sayAndAssertThat("Title matches",
-        created.title, equalTo("Java 25 Features"));
+    ctx.sayBenchmark("String.join (1000 elements)", () -> {
+        String.join("", java.util.Collections.nCopies(1000, "x"));
+    });
 }
 ```
 
-### Workflow 3: Login + Authenticated Request
+### Workflow 3: Document Exception Handling
 
 ```java
 @Test
-public void testAuthenticatedPost() {
-    sayNextSection("Authentication");
-    say("First we log in with form credentials.");
+void documentExceptions(DtrContext ctx) {
+    ctx.sayNextSection("Error Handling");
+    ctx.say("The API throws structured exceptions for invalid input.");
 
-    // Silent login
-    makeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/login"))
-            .addFormParameter("email", "alice@example.com")
-            .addFormParameter("password", "secret"));
+    try {
+        if (true) throw new IllegalArgumentException("userId must be positive, got: -1");
+    } catch (IllegalArgumentException e) {
+        ctx.sayException(e);
+    }
 
-    say("Now we make an authenticated request.");
-    ArticleDto article = new ArticleDto("Sealed Classes", "...");
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));
-
-    sayAndAssertThat("Authenticated POST succeeds",
-        response.httpStatus(), equalTo(201));
+    ctx.sayNote("Callers should catch IllegalArgumentException and return HTTP 400.");
 }
 ```
 
-### Workflow 4: Handle Errors Explicitly
+### Workflow 4: Document HTTP Interactions (java.net.http)
 
 ```java
 @Test
-public void testUnauthorizedRequest() {
-    sayNextSection("Error Handling");
-    say("Requests without authentication return 403 Forbidden.");
+void documentHttpCall(DtrContext ctx) throws Exception {
+    ctx.sayNextSection("Fetching Users");
+    ctx.say("Use java.net.http.HttpClient to call the user API.");
 
-    Response forbidden = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(new ArticleDto("Title", "...")));
+    ctx.sayCode("""
+        var client = HttpClient.newHttpClient();
+        var request = HttpRequest.newBuilder()
+            .uri(URI.create("https://api.example.com/users"))
+            .GET()
+            .build();
+        var response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        """, "java");
 
-    sayAndAssertThat("POST without auth returns 403",
-        forbidden.httpStatus(), equalTo(403));
+    ctx.sayJson(Map.of(
+        "users", List.of(
+            Map.of("id", 1, "name", "Alice"),
+            Map.of("id", 2, "name", "Bob")
+        )
+    ));
 }
 ```
 
-### Workflow 5: File Upload
+### Workflow 5: Capture Environment
 
 ```java
 @Test
-public void testFileUpload() {
-    sayNextSection("File Upload");
-    say("POST /api/upload accepts multipart file uploads.");
-
-    File file = new File("test-file.pdf");
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/upload"))
-            .addFileToUpload("file", file));
-
-    sayAndAssertThat("Upload succeeds",
-        response.httpStatus(), equalTo(200));
+void captureEnvironment(DtrContext ctx) {
+    ctx.sayNextSection("Test Environment");
+    ctx.say("This test ran in the following environment:");
+    ctx.sayEnvProfile();
 }
 ```
 
@@ -252,142 +206,83 @@ public void testFileUpload() {
 
 ## Complete Annotated Example
 
-Here's a minimal, working DocTest with explanations:
-
 ```java
-import io.github.seanchatmangpt.dtr.dtr.DTR;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Request;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Response;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Url;
-import org.junit.Test;
+import io.github.seanchatmangpt.dtr.core.DtrContext;
+import io.github.seanchatmangpt.dtr.core.DtrExtension;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import java.util.List;
+import java.util.Map;
 
-import static org.hamcrest.CoreMatchers.*;
+@ExtendWith(DtrExtension.class)
+class UserApiDocTest {
 
-public class UserApiDocTest extends DTR {
-
-    // ✅ Implement this — return your test server's base URL
-    @Override
-    public Url testServerUrl() {
-        return Url.host("http://localhost:8080");
-    }
+    record User(long id, String name, String email) {}
 
     @Test
-    public void testUserApi() {
-        // ✅ START: Create a section heading
-        sayNextSection("User Management API");
+    void documentUserApi(DtrContext ctx) {
+        // Section heading — appears as H1 in output
+        ctx.sayNextSection("User Management API");
 
-        // ✅ Add context text — this appears above the request
-        say("The User API supports CRUD operations on user resources.");
+        // Explanatory paragraph
+        ctx.say("The User API provides CRUD operations for user resources. " +
+                "All operations require a valid Bearer token.");
 
-        // ✅ Create a user via POST
-        UserDto newUser = new UserDto("alice", "alice@example.com");
-        Response createResponse = sayAndMakeRequest(
-            Request.POST()
-                .url(testServerUrl().path("/api/users"))
-                .contentTypeApplicationJson()
-                .payload(newUser));
+        // Document the schema
+        ctx.sayRecordComponents(User.class);
 
-        // ✅ Assert and document the result
-        sayAndAssertThat("User created with 201 status",
-            createResponse.httpStatus(), equalTo(201));
+        // Example payload
+        ctx.say("Example user object:");
+        ctx.sayJson(new User(42L, "alice", "alice@example.com"));
 
-        // ✅ Parse the response
-        UserDto created = createResponse.payloadAs(UserDto.class);
+        // Benchmark the serialization
+        ctx.sayBenchmark("JSON serialization of User", () -> {
+            // simulate serialization
+            var u = new User(1L, "test", "test@example.com");
+            u.toString();
+        });
 
-        // ✅ Verify the created object
-        sayAndAssertThat("Created user has an ID",
-            created.id, notNullValue());
-        sayAndAssertThat("Name matches",
-            created.name, equalTo("alice"));
+        // Environment snapshot
+        ctx.sayEnvProfile();
 
-        // ✅ Fetch all users
-        say("Now we fetch all users.");
-        Response listResponse = sayAndMakeRequest(
-            Request.GET()
-                .url(testServerUrl().path("/api/users")));
-
-        sayAndAssertThat("List endpoint returns 200",
-            listResponse.httpStatus(), equalTo(200));
-
-        // ✅ Verify list contents
-        List<UserDto> users = listResponse
-            .payloadJsonAs(new TypeReference<List<UserDto>>() {});
-        sayAndAssertThat("At least 1 user in list",
-            users.size(), greaterThanOrEqualTo(1));
+        // Warning
+        ctx.sayWarning("User IDs are assigned by the server and must not be set by clients.");
     }
 }
 ```
 
 **What this test produces:**
-1. An HTML file at `target/site/dtr/UserApiDocTest.html`
-2. Section heading: "User Management API"
-3. Explanatory paragraphs before each request
-4. Formatted HTTP request and response panels
-5. Green/red assertion boxes showing pass/fail status
-6. An index page linking all generated docs
+- `target/docs/test-results/UserApiDocTest.md`
+- `target/docs/test-results/UserApiDocTest.html`
+- `target/docs/test-results/UserApiDocTest.tex`
+- `target/docs/test-results/UserApiDocTest.json`
 
 ---
 
 ## Quick Reference Table
 
-| Need | Method | Example |
-|------|--------|---------|
-| Create section heading | `sayNextSection(String)` | `sayNextSection("Users")` |
-| Add text | `say(String)` | `say("This endpoint creates a user.")` |
-| Make request + document | `sayAndMakeRequest(Request)` | See workflows above |
-| Make request silently | `makeRequest(Request)` | `makeRequest(Request.POST()...)` |
-| Assert with documentation | `sayAndAssertThat(String, T, Matcher)` | `sayAndAssertThat("Status is 200", 200, equalTo(status))` |
-| GET request | `Request.GET()` | `.url(baseUrl).path("/api/users")` |
-| POST with JSON | `Request.POST().contentTypeApplicationJson()` | `.payload(dto)` |
-| POST with form | `Request.POST().addFormParameter()` | `.addFormParameter("name", "value")` |
-| Parse JSON | `.payloadJsonAs(Type)` | `.payloadJsonAs(new TypeReference<List<User>>() {})` |
-| Parse auto-detect | `.payloadAs(Class)` | `.payloadAs(UserDto.class)` |
-| Get raw text | `.payloadAsString()` | Return string for custom parsing |
-| Build URL | `Url.host("...").path(...)` | `Url.host("http://localhost:8080").path("/api/users")` |
-| Add query param | `.addQueryParameter(key, value)` | `.addQueryParameter("page", "1")` |
-| Add header | `.addHeader(key, value)` | `.addHeader("Authorization", "Bearer token")` |
-| File upload | `.addFileToUpload(paramName, file)` | `.addFileToUpload("avatar", new File("avatar.png"))` |
-| Session cookies | Auto-managed | Persists across requests in same test method |
-
----
-
-## Common Assertion Matchers
-
-Use these with `sayAndAssertThat()` for readable documentation:
-
-```java
-import static org.hamcrest.CoreMatchers.*;
-
-// Equality and comparison
-sayAndAssertThat("Status matches", 200, equalTo(response.httpStatus()));
-sayAndAssertThat("Count is positive", count, greaterThan(0));
-sayAndAssertThat("Value is in range", value, allOf(greaterThan(0), lessThan(100)));
-
-// Null/present
-sayAndAssertThat("ID is present", created.id, notNullValue());
-sayAndAssertThat("Error message is null", error, nullValue());
-
-// String matching
-sayAndAssertThat("Email contains domain", email, containsString("@example.com"));
-
-// Collections
-sayAndAssertThat("List is not empty", users, not(empty()));
-sayAndAssertThat("List has 3 items", users, hasSize(3));
-
-// Type checking
-sayAndAssertThat("Is String", value, instanceOf(String.class));
-```
+| Need | Method |
+|------|--------|
+| Section heading | `ctx.sayNextSection("Title")` |
+| Body text | `ctx.say("Paragraph text.")` |
+| Code example | `ctx.sayCode("code", "java")` |
+| JSON payload | `ctx.sayJson(object)` |
+| Markdown table | `ctx.sayTable(new String[][] {...})` |
+| Key-value pairs | `ctx.sayKeyValue(map)` |
+| Bullet list | `ctx.sayUnorderedList(list)` |
+| Numbered list | `ctx.sayOrderedList(list)` |
+| Inline benchmark | `ctx.sayBenchmark("label", runnable)` |
+| Environment info | `ctx.sayEnvProfile()` |
+| Record schema | `ctx.sayRecordComponents(MyRecord.class)` |
+| Exception details | `ctx.sayException(throwable)` |
+| Note | `ctx.sayNote("tip")` |
+| Warning | `ctx.sayWarning("critical info")` |
 
 ---
 
 ## Next Steps
 
-**Now that you know the Core Trinity:**
-- Read [Testing a REST API](../tutorials/testing-a-rest-api.md) for a full working example
-- Check [Quick Reference](80-20-quick-reference.md) when you need to look something up
-- Explore [Design Patterns](../explanation/80-20-design-patterns.md) to understand the philosophy
-
-**To go deeper:**
-- [How-to Guides](index.md) for specific tasks (authentication, WebSockets, etc.)
-- [API Reference](../reference/index.md) for complete method documentation
-- [Explanation](../explanation/index.md) for architectural understanding
+- [Benchmarking](benchmarking.md) — Use `sayBenchmark` for real performance documentation
+- [Document Record Schemas](upload-files.md) — Deep-dive into `sayRecordComponents`
+- [Mermaid Diagrams](websockets-connection.md) — Visualize type structure with `sayMermaid` and `sayClassDiagram`
+- [Advanced Rendering Formats](advanced-rendering-formats.md) — Blog, LaTeX, slides from a single test
